name:                servant-auth-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lupusanay/servant-auth-api#readme
license:             MIT
license-file:        LICENSE
author:              Ilya Kopeshtianski
maintainer:          lupusanay@gmail.com
copyright:           2019 Ilya Kopeshtianski
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Api.Description
                     , Api.App
                     , Api.Server
                     , Data.AuthSession
                     , Data.User
                     , Database.Sessions.Users
                     , Database.Statements.Users
                     , Handlers.AuthSession
                     , Handlers.User
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , servant-auth
                     , servant-auth-server
                     , wai
                     , warp
                     , generic-lens
                     , containers
                     , vector
                     , bytestring
                     , hasql
                     , hasql-pool
                     , hasql-th
                     , mtl
                     , profunctors
                     , text
                     , jose
                     , lens
                     , bcrypt
                     , time
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , TemplateHaskell
                     , TypeOperators
                     , QuasiQuotes
                     , DeriveFunctor
                     , OverloadedStrings
                     , DeriveGeneric
                     , GeneralizedNewtypeDeriving
                     , DeriveAnyClass
                     , AllowAmbiguousTypes
                     , DuplicateRecordFields
                     , FlexibleContexts
                     , NoMonomorphismRestriction
                     , TypeApplications
                     , RankNTypes

executable servant-auth-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-auth-api
  default-language:    Haskell2010

test-suite servant-auth-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-auth-api
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lupusanay/servant-auth-api
